Fixed MMOBHTML-44: Adding new address form is too wide

--- a/skin/frontend/default/iphone/css/iphone.css
+++ b/skin/frontend/default/iphone/css/iphone.css
@@ -824,8 +824,8 @@ input[type="text"] {
     padding:9px;
     border-radius:2px 2px 5px 5px;
     background:-webkit-gradient(linear, 0 0, 0 100%,color-stop(0, #FCFDFD), color-stop(0.8, #EEEEEE), color-stop(1, #E8E9E9));
-    margin:0 -10px -10px;
-    padding:10px 10px 16px;
+    margin:0 0 -10px;
+    padding:10px 0 16px;
     -webkit-box-shadow:inset 0 -3px 3px #ccc;
 }
 
@@ -860,7 +860,8 @@ input[type="text"] {
 .catalog-category-view .breadcrumbs li:nth-last-child(2):before,
 .review-product-list .breadcrumbs li:nth-last-child(2):before,
 .my-account .product-review .buttons-set .back-link:before,
-.review-customer-index .buttons-set .back-link:before {
+.review-customer-index .buttons-set .back-link:before,
+.customer-address-form .buttons-set .back-link:before {
     content:'';
     background:-webkit-gradient(linear, left top, right bottom, color-stop(0.10, #eee), color-stop(0.28, #e2e2e2), color-stop(0.9, #c4c4c4));
     border:1px solid #b3b3b3;
@@ -878,7 +879,8 @@ input[type="text"] {
 .catalog-category-view .breadcrumbs li:nth-last-child(2) a,
 .review-product-list .breadcrumbs li:nth-last-child(2) a,
 .my-account .product-review .buttons-set .back-link a,
-.review-customer-index .buttons-set .back-link a {
+.review-customer-index .buttons-set .back-link a,
+.customer-address-form .buttons-set .back-link a {
     color:#2f2f2f;
     display:inline-block;
     font-size:10px;
@@ -1842,9 +1844,11 @@ section .category-title { display:none; }
 -----------------------------*/
 .my-account .product-review { padding:10px 10px 0; }
 .my-account .product-review .page-title,
-.review-customer-index .my-account .page-title { background:-webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#e5e5e5)); border:none; border-bottom:1px solid #ccc; height:20px; margin:-10px -10px 10px; -webkit-box-shadow:none; }
+.review-customer-index .my-account .page-title,
+.customer-address-form .page-title { background:-webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#e5e5e5)); border:none; border-bottom:1px solid #ccc; height:20px; margin:-10px -10px 10px; -webkit-box-shadow:none; }
 .my-account .product-review .page-title h1,
-.review-customer-index .page-title h1 { font-size:16px; line-height:20px; }
+.review-customer-index .page-title h1,
+.customer-address-form .page-title h1 { font-size:16px; line-height:20px; }
 .my-account .product-review .product-img-box {}
 .my-account .product-review .product-img-box > * { display:none; }
 .my-account .product-review .product-img-box > a { display:block; float:left; margin-right:10px; }
@@ -1856,11 +1860,14 @@ section .category-title { display:none; }
 .my-account .product-review .ratings-table { border-collapse:collapse; margin:0 0 5px; }
 .my-account .product-review .ratings-table th { color:#222; line-height:1; text-align:left; padding:4px 5px 4px 0; }
 .my-account .product-review .buttons-set,
-.review-customer-index .buttons-set { position:absolute; top:51px; left:20px; }
+.review-customer-index .buttons-set,
+.customer-address-form .back-link { position:absolute; top:51px; left:20px; }
 .my-account .product-review .buttons-set .back-link,
-.review-customer-index .buttons-set .back-link { float:none; padding:0; }
+.review-customer-index .buttons-set .back-link,
+.customer-address-form .buttons-set .back-link { float:none; padding:0; }
 .my-account .product-review .buttons-set .back-link small,
-.review-customer-index .buttons-set .back-link small { display:none; }
+.review-customer-index .buttons-set .back-link small,
+.customer-address-form .buttons-set .back-link small { display:none; }
 
 .review-customer-index section[role="main"] { padding-bottom:0; }
 .review-customer-index .my-account .page-title { margin:0; }
@@ -2218,10 +2225,16 @@ section .category-title { display:none; }
     font-size: 16px;
     text-transform: small-caps;
 }
-.customer-account-edit form { padding:0 10px; }
-.customer-account-edit select { border:1px solid; border-color:#8e8e8e #e1e1e1 #e1e1e1 #8e8e8e; border-radius:5px; font-size:18px; padding:5px 30px 5px 5px; width:100%; margin:0; }
-.customer-account-edit .field label { color:#5e5e5e; display:block; font-size:12px; line-height:16px; margin:8px 0 0; padding:0 0 3px; font-weight:bold; }
-.customer-account-edit .buttons-set button[type=submit] {
+.customer-account-edit form,
+.customer-address-form form { padding:0 10px; }
+.customer-address-form form .buttons-set { padding:10px 0; }
+.customer-account-edit select,
+.customer-address-form form select { border:1px solid; border-color:#8e8e8e #e1e1e1 #e1e1e1 #8e8e8e; border-radius:5px; font-size:18px; padding:5px 30px 5px 5px; width:100%; margin:0; }
+.customer-account-edit .field label,
+.customer-address-form form .field label,
+.customer-address-form form .wide  label { color:#5e5e5e; display:block; font-size:12px; line-height:16px; margin:8px 0 0; padding:0 0 3px; font-weight:bold; }
+.customer-account-edit .buttons-set button[type=submit],
+.customer-address-form form .buttons-set button[type=submit] {
     display:block;
     margin:0;
     padding:5px 20px;
